Changed landing to fixed height to prevent jumping in mobile Chrome browsers

--- a/less/main.less
+++ b/less/main.less
@@ -232,7 +232,6 @@
   height: auto;
   max-width: 100%;
   margin-left: 200px;
-  // border: 5px solid black;
 
   @media (max-width: 800px) {
     width: 100%;
@@ -247,13 +246,17 @@
 
 
 .landing {
-  min-height: 80vh;
+  min-height: 800px;
   background-color: #95C1CC;
   margin: none;
   display: flex;
   align-items: center;
   flex-direction: row;
   width: 100%;
+
+  @media (max-width: 800px) {
+    min-height: 600px;
+  }
 
   .landing-text {
     text-align: center;
